# fastapi-demo

./: .env  Makefile  README.md  plan.txt  pyproject.toml  run-local-servers.sh
accounts/: app.py  config.py  data_layer.py  main.py  service_types.py  transaction_service.py
accounts/tests/: test_accounts_service.py
models/: current_account.py
transactions/: app.py  data_layer.py  main.py  service_types.py
