[tool.poetry]
name = "blueharvest"
version = "0.1.0"
description = "Blueharvest tech test"
authors = ["Robin Harvey <harvey.robin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.77.1"
uvicorn = "^0.17.6"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
