[tool.poetry]
name = "blueharvest"
version = "0.1.0"
description = "FastAPI portfolio piece"
authors = ["Robin Harvey <harvey.robin@gmail.com>"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
asyncio_mode = "auto"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.77.1"
uvicorn = "^0.17.6"
httpx = "^0.22.0"
pydantic = {extras = ["email"], version = "^1.9.0"}
pytest = "^7.1.2"
python-dotenv = "^0.20.0"
pytest-asyncio = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
